# a2a-helper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
a2a/: __init__.py  client.py  echo_agent.py  server.py
docs/: CURSOR_USAGE.md
examples/: CLAUDE.md  cursorrules
skills/a2a-helper/: SKILL.md
tests/: test_smoke.py
