[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-helper"
version = "0.1.0"
description = "Lightweight agent-to-agent hub: HTTP + WebSocket, SQLite-backed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "a2a-helper contributors" },
]
keywords = ["agent", "a2a", "hub", "ai", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "websockets>=12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
a2a-server = "a2a.server:main"
a2a-client = "a2a.client:main"
a2a-echo   = "a2a.echo_agent:main"

[project.urls]
Homepage   = "https://github.com/hubianluanma/a2a-helper"
Issues     = "https://github.com/hubianluanma/a2a-helper/issues"
Changelog  = "https://github.com/hubianluanma/a2a-helper/blob/main/CHANGELOG.md"

# -- build --------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["a2a"]

[tool.hatch.version]
path = "a2a/__init__.py"

# -- ruff ---------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length handled by formatter; keep broad readability

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts are fine in tests

# -- pytest -------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = "-q"